--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     description: The token of the action to start
     required: true
   broker_url:
-    default: https://nr-broker.apps.silver.devops.gov.bc.ca
+    default: https://broker.io.nrs.gov.bc.ca
     description: The broker url.
 
 runs:
